--- a/example.html
+++ b/example.html
@@ -6,10 +6,9 @@
 <script type="text/javascript" src="coolock.js"></script>
 </head>
 <body>
-<div id="coolockWrapper">
+<div id="coolockWrapper"></div>
 <script type="text/javascript">
 new Coolock(180, 180);
 </script>
-</div>
 </body> 
 </html>
