--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Coolock</title>
-<script type="text/javascript" src="coolock.js"></script>
+<script type="text/javascript" src="http://rawgithub.com/CivilForYou/Coolock/master/coolock.js"></script>
 </head>
 <body>
 <div id="coolockWrapper"></div>
