--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@ permalink: /404.html
 <title>404 - Not Found!</title>
 </head>
 <body>
-<h1>Sorry, but the page not found!</h1>
+<h1>Sorry, but the page is not found!</h1>
 </body>
 </html>
