--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Coolock</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <!--<script type="text/javascript" src="http://rawgithub.com/FarahmandM/Coolock/master/coolock.js"></script>-->
 <script type="text/javascript" src="coolock.js"></script>
 </head>
@@ -11,7 +12,12 @@
 <script type="text/javascript">
 var myCoolock = new Coolock();
 var anotherCoolock = new Coolock({size: 500, canvasId: 'anotherCoolock', strokeColor: 'brown'});
-var anotherCoolock = new Coolock({size: 450, canvasId: 'anotherCoolock', fillColor: '#000', strokeColor: '#fff'});
+//new Coolock({size: 450, canvasId: 'anotherCoolock', fillColor: '#000', strokeColor: '#fff'});
+var o = {size: 200, lineCap: 'butt'}
+new Coolock(o);
+//myCoolock.fillColor = 'red';
+//myCoolock.lineCap = 'square';
+//myCoolock.draw();
 </script>
 </body> 
 </html>
