--- a/example.html
+++ b/example.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Coolock</title>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <!--<script type="text/javascript" src="http://rawgithub.com/FarahmandM/Coolock/master/coolock.js"></script>-->
 <script type="text/javascript" src="coolock.js"></script>
 </head>
