added some styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Usage</h2>
       </div>
       <p>Create a <code>div</code> element which has an <code>id</code> attribute like so:</p>
-      <pre><code><xmp><div id="coolockWrapper"></div></xmp></code></pre>
+      <pre><xmp style="margin:0;"><div id="coolockWrapper"></div></xmp></pre>
       <p>Then place the code below after the <code>div</code>:</p>
       <pre><code>new Coolock(options);</code></pre>
       <p>where <code>options</code> is an object containing these properties:</p>
