--- a/index.html
+++ b/index.html
@@ -17,25 +17,6 @@
     <!--<script type="text/javascript" src="http://rawgithub.com/FarahmandM/Coolock/master/coolock.js"></script>-->
     <script type="text/javascript" src="coolock.js"></script>
     <style>
-      div.pre {
-        white-space: pre;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        overflow: auto;
-        font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
-        display: block;
-        padding: 9.5px;
-        margin: 0 0 10px;
-        font-size: 13px;
-        line-height: 1.42857143;
-        color: #333;
-        word-break: break-all;
-        word-wrap: break-word;
-        background-color: #f5f5f5;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
       xmp {margin:0;}
     </style>
   </head>
@@ -74,7 +55,7 @@
         <h2>Usage</h2>
       </div>
       <p>Create a <code>div</code> element which has an <code>id</code> attribute like so:</p>
-      <div class="pre"><xmp><div id="coolockWrapper"></div></xmp></div>
+      <pre><xmp><div id="coolockWrapper"></div></xmp></pre>
       <p>Then place the code below after the <code>div</code>:</p>
       <pre><code>new Coolock(options);</code></pre>
       <p>where <code>options</code> is an object containing these properties:</p>
