added FreeCodeCamp menu etc

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
           <ul class="nav navbar-nav">
             <li><a href="https://farahmandm.github.io/">Home</a></li>
             <li class="active"><a href="https://farahmandm.github.io/Coolock/">Coolock</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">FreeCodeCamp <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/tribute-page" target="_blank">Tribute Page</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/portfolio-page" target="_blank">Portfolio Page</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/random-quote-machine" target="_blank">Random Quote Machine</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/local-weather" target="_blank">Local Weather</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/wikipedia-viewer" target="_blank">Wikipedia-Viewer</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/twitch-streamer" target="_blank">Twitch Streamer</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/calculator" target="_blank">Calculator</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/pomodoro-clock" target="_blank">Pomodoro Clock</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/tic-tac-toe-game" target="_blank">Tic Tac Toe Game</a></li>
+                <li><a href="https://farahmandm.github.io/FreeCodeCamp/projects/frontend/simon-game" target="_blank">Simon Game</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
