--- a/index.html
+++ b/index.html
@@ -40,21 +40,7 @@
           <ul class="nav navbar-nav">
             <li><a href="https://farahmandm.github.io/">Home</a></li>
             <li class="active"><a href="https://farahmandm.github.io/Coolock/">Coolock</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">FreeCodeCamp <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="https://codepen.io/_Farahmand/full/OmeEee/" target="_blank">Tribute Page</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/RgbrWb/" target="_blank">Portfolio Page</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/vZYXoN/" target="_blank">Random Quote Machine</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/yXLxVM/" target="_blank">Local Weather</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/zzxWLB/" target="_blank">Wikipedia-Viewer</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/MowggO/" target="_blank">Twitch Streamer</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/PjzPOZ/" target="_blank">Calculator</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/WOGzzw/" target="_blank">Pomodoro Clock</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/yXZWWB/" target="_blank">Tic Tac Toe Game</a></li>
-                <li><a href="https://codepen.io/_Farahmand/full/qXBoqJ/" target="_blank">Simon Game</a></li>
-              </ul>
-            </li>
+            <li><a href="https://farahmandm.github.io/FreeCodeCamp/">FreeCodeCamp</a></li>
           </ul>
         </div>
       </div>
